Closed Bug 483607 Opened 16 years ago Closed 15 years ago

sorting storage template integers does not work properly

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

Attachments

(1 file)

Attached patch fix upSplinter Review
This is a regression from bug 476634 because the sort code should be checking for 64 bit integers. Laurent, can you check if this looks ok to you? It fixes an issue with a couple of the storage tests in bug 378893.
Attachment #367598 - Flags: superreview?(jonas)
Attachment #367598 - Flags: review?(laurent)
Comment on attachment 367598 [details] [diff] [review]
fix up

It seems good for me.
Attachment #367598 - Flags: review?(laurent) → review+
Blocks: 378893
Attachment #367598 - Flags: superreview?(jonas) → superreview+
Checked in. Tests are part of bug 378893.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: