Bug 483607, sorting template integers does not work, r=laurent,sr=jonas